# GPUWatch

./: .gitignore  README.md  gpu_price_tracker.py  index.html  pyproject.toml  requirements.txt
dashboard/: README.md
docs/market-research/: GPU_Cloud_Rental_Market_Report_2025.md
src/: __init__.py  analyzer.py  api.py  collector.py  config.py  models.py  notifier.py  storage.py
tests/: test_models.py
